deployments/notificator-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notificator-v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: notificator
  template:
    metadata:
      labels:
        app: notificator
        version: v1
    spec:
      containers:
      - name: notificator-service
        image: efrengarcial/notificator-service:v1
        imagePullPolicy: Always
        command: [
          "./app",
          "-grpc-addr=:8085",
        ]
        ports:
        - containerPort: 8085
          name: notif-serv-port
