deployments/users-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users
  template:
    metadata:
      labels:
        app: users
        version: v1
    spec:
      containers:
      - name: users-service
        image: efrengarcial/users-service:v1
        imagePullPolicy: Always
        command: [
          "./app",
          "-http-addr=:8181",
        ]
        ports:
        - containerPort: 8181
          name: user-serv-port
