deployments/notificator-service.yml
apiVersion: v1
kind: Service
metadata:
  name: notificator-service
  labels:
    app: notificator
spec:
  ports:
  - port: 8085
    protocol: TCP
  selector:
    app: notificator
