deployments/users-service.yml
apiVersion: v1
kind: Service
metadata:
  name: users-service
  labels:
    app: users
spec:
  ports:
  - port: 8181
    protocol: TCP
  selector:
    app: users
