deployments/virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: users-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - users-gateway
  http:
  - match:
    - uri:
        prefix: /create
    route:
    - destination:
        port:
          number: 8181
        host: users-service
